# qtcmakeroot

./: CMakeLists.txt  README.md  main.cpp  main.pro
